--- a/ado3.html
+++ b/ado3.html
@@ -10,7 +10,7 @@
         <script src="lib/testefw.js" defer></script>
         <script src="ado3-auxiliar.js" defer></script>
         <script src="ado3-teste.js" defer></script>
-        <script src="ado3-gabarito.js" defer></script>
+        <script src="ado3.js" defer></script>
         <script>
             "use strict";
 
