--- a/ado3.html
+++ b/ado3.html
@@ -20,6 +20,7 @@
 
             function limparForm12() {
                 document.querySelectorAll(".ex12 input[type='text']").forEach(e => e.value = "");
+                document.getElementById("pokemon-foto").src = "https://cdn-icons-png.flaticon.com/256/4467/4467515.png";
             }
         </script>
     </head>
