--- a/ado3.html
+++ b/ado3.html
@@ -37,11 +37,11 @@
                 </p>
                 <p class="ex10e12-botao">
                     <label for="botao-cadastrar">&nbsp;</label>
-                    <button type="button" id="botao-cadastrar" onclick="pesquisarCepDOM();">Pesquisar</button>
+                    <button type="button" id="botao-cep" onclick="pesquisarCepDOM();">Pesquisar</button>
                 </p>
                 <p class="ex10e12-botao">
                     <label for="botao-limpar">&nbsp;</label>
-                    <button type="button" id="botao-limpar" onclick="limparForm10();">Limpar campos</button>
+                    <button type="button" id="botao-limpar-10" onclick="limparForm10();">Limpar campos</button>
                 </p>
             </div>
             <p>
@@ -60,11 +60,11 @@
                 <p>
                     <p class="ex10e12-botao">
                         <label for="botao-cadastrar">&nbsp;</label>
-                        <button type="button" id="botao-cadastrar" onclick="pesquisarPokemonDOM();">Pesquisar</button>
+                        <button type="button" id="botao-pokemon" onclick="pesquisarPokemonDOM();">Pesquisar</button>
                     </p>
                     <p class="ex10e12-botao">
                         <label for="botao-limpar">&nbsp;</label>
-                        <button type="button" id="botao-limpar" onclick="limparForm12();">Limpar campos</button>
+                        <button type="button" id="botao-limpar-12" onclick="limparForm12();">Limpar campos</button>
                     </p>
                 </p>
             </div>
